Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -389,7 +389,449 @@ The below example will show, how to randomize the elements of the queue.
 **output log file link**  
 
 
+# Inside constraint
+The inside keyword is used to check if a given value lies within the range.
+The values contained by the inside block can be variable, constant, or range. **inside** construct includes both upper and lower limits and it gathers all values and chooses between the values with equal probability.    
+In the inside block, we write inside keyword followed by curly braces{}
 
+**Syntax**
+ 
+ `constraint const_name { variable inside { values or range };}`
+
+ * **Example:**
+
+              // class declaration
+              class PQR;
+              // random variable declared using the rand keyword
+              rand bit [3:0] var1;
+              //constraint block
+              constraint C1 {(var1 inside {[3:9]});}
+              endclass
+
+              module top;
+              initial begin
+              int i;
+              //Here, we need to create a handle
+              //handle name is pkt
+              PQR pqr;
+              //memory allocation to the handle
+              pqr=new();
+              $display("-------Output for  inside constraint-------");
+              $display("-------------------------------------------");
+              for(int i =1; i<7;i++)begin
+              // The .randomize() function is used to randomize properties of an object of a class
+              void'(pqr.randomize());
+              $display("[%0t] @ iteration: %0d -----> var1=%0d",$time,i,pqr.var1);
+              end
+              $display("-------------------------------------------");
+              end
+              endmodule
+
+In the above example, we declared a class, the class name is PQR in which variable var1 is declared. In the constraint block, we are declaring a range by the use of an inside keyword and the range lies between 3 and 9.      
+In this, the random value will be printed between the 3 and 9.
+
+
+
+* **Output snap:**      
+The below figure shows the output of the inside constraint.
+
+![fff drawio](https://user-images.githubusercontent.com/110447788/191229181-0b269a8a-9310-46f3-8b97-331a022af816.png)
+
+
+**GitHub Lab File link**
+
+**GitHub Lab Output link**
+
+
+# Inverted inside
+
+The inverted inside is the opposite of the inside operator. It can be achieved by just placing a not symbol **!** before it.    
+If we want to generate a value that should not be inside a range of values (range_of_values), here we can use the inside operator with negation
+
+**Syntax**    
+` constraint const_name { !(variable inside { values or range });}`
+
+* **Example:**
+
+              // class declaration
+              class PQR;
+              // random variable declared using the rand keyword
+              rand bit [3:0] var2;
+              //constraint block
+              //here we use, not symbol before the inside keyword
+              constraint C1 {!(var2 inside {[3:9]});}
+              endclass
+              module top;
+              initial begin
+              int i;
+              //Here, we need to create a handle
+              //handle name is pkt
+              PQR pqr;
+             //memory allocation to the handle
+             pqr=new();
+             $display("-----Output for invert inside constraint-----");
+             $display("---------------------------------------------");
+             for(int i =1; i<7;i++)
+             begin
+             // The .randomize() function is used to randomize properties of an object of a class
+             void'(pqr.randomize());
+             $display("[%0t] @ iteration: %0d -----> var2=%0d",$time,i,pqr.var2);
+             end
+             $display("---------------------------------------------");
+             end
+             endmodule
+
+In the above example, we declared a class, the class name is PQR in which variable var2 is declared. In the constraint block, we are declaring a range by the use of an inside keyword with the negation and the range lies between 3 and 9. If we want to generate a value that should not be inside a range of values, here we can use the inside operator with negation.      
+In this, the random value will be printed that does not lie in range because of use of inside keyword with negation.
+     
+
+* **Output snap:**    
+The below figure shows the output of the inverted inside constraint.
+
+![fff-Page-2 drawio](https://user-images.githubusercontent.com/110447788/191229816-41c7a2a5-bb4a-4c2e-be51-ee747a4ea36c.png)
+
+
+**GitHub Lab File link:**
+
+**GitHub Lab Output link:**
+
+
+# Weighted Distribution
+The dist operator allows you to create the weighted distribution. **dist** is an operator that takes a list of values and weights, separated by **:=** or 
+ **:/** operator.
+The value which is more weight, the occurrence of that value in randomization is more. The **dist** operator is helpful whenever to have weighted distribution during randomization. 
+
+There are two types of distribution operators
+
+## 1.  := operator
+The := operator assigns the specified weight to the item or, if the item is a range, specified value to every value in the range. 
+
+**Syntax**
+
+`value := weightage`
+
+ * **Example:**  
+      
+            class myWorld;
+            // random variable declared using the rand keyword
+            rand bit [3:0] value1;
+            //constraint block
+            //In this, the weight of 1 is 30, 6 is 70, and 7 is 20
+            //while 2 through 5 is 40
+    
+            constraint m_var { value1 dist { 1:=30, [2:5]:=40, 6:=70, 7:=20};}
+            endclass
+ 
+             module top;
+             initial begin
+             int i;
+            //Here, we need to create a handle
+            //handle name is world
+             myWorld world;
+            // memory allocation to the handle
+            world = new();
+            $display("-----Output for := operator-----");
+            $display("The occurrence of '6' is more as '6' has more weight");
+            for(int i =0; i<10; i++) begin
+            void'( world.randomize());
+            $display("[%0t] @ iteration %0d  -----> value1=%0d",$time,i,world.value1);
+            end
+            end
+           endmodule
+
+In this example, the weight of 1 is 30, 6 is 70, and 7 is 20  while 2 through 5 is 40, for a total of 280.   
+Hence the probability of choosing 1 is 30/280, 6 is 70/280, 7 is 20/280 and the probability of choosing a value between 2 and 5 is 40/280. In this 6 have appeared more because they have a higher weight and are chosen more often.
+
+ * **Output snap:**     
+The below figure shows the output of the weighted distribution with := operator.
+
+![fff-Page-3 drawio](https://user-images.githubusercontent.com/110447788/191230064-f30d3653-31f6-4f48-b3c2-92ddeda93c39.png)
+
+                                       Fig-: 
+
+
+**GitHub Lab File link**
+
+**GitHub Lab Output link**
+
+
+## 2. :/ operator
+
+The :/ operator assigns the specified weight to the item or,  if the item is a range,  to the range as a whole. If there are n values in the range, the weight of each value is range_weight / n
+
+**Syntax**
+
+` value :/ weightage`
+
+ * **Example**
+
+             //class declaration
+             class myWorld;
+             //random variable declared using the rand keyword
+             rand bit [3:0] value1;
+             //constraint block
+             //In this, the weight of 1 is 30, 6 is 40, and 7 is 20
+             //while 2 through 5 share a total weight of 60
+             constraint m_var { value1 dist { 1:/30, [2:5]:/60, 6:/40, 7:/20};} 
+             endclass
+             //module name is top
+             module top;
+             initial begin
+             int i;
+             //Here, we need to create a handle
+             //handle name is world
+             myWorld world;
+ 
+             //memory allocation to the handle
+             world = new();
+             $display("-----Output for :/ operator");
+             $display(" The occurrence of '6' is more as '6' has more weight");
+             $display("--------------------------------");
+             for(int i =0; i<10; i++) begin
+             void'( world.randomize());
+             $display("[%0t] @ iteration %0d -----> value1=%0d",$time,i,world.value1);
+             end
+             end
+             endmodule
+
+
+In this example, the weight of 1 is 30, 6 is 40, and 7 is 20, while 2 through 5 share a total weight of 60, thus having 60/4 each.  
+Hence the probability of choosing 1 is 30/150, 6 is 40/150,  7 is 20/150 and the probability of choosing a value between 2 and 5 is 60/150.    
+In this, 6 has appeared more than the other because it has the highest weight.
+
+ * **Output Snap:**  
+The below figure shows the output of the weighted distribution with :/ operator.
+
+ 
+![fff-Page-4 drawio](https://user-images.githubusercontent.com/110447788/191232923-542605a3-fe78-4d93-b38f-e3ca2ee6a87d.png)
+
+                           Fig-:
+
+**GitHub Lab File link**
+
+**GitHub Lab Output link**
+### Bidirectional constraint     
+Constraints are solved bidirectionally, which means constraints on all random variables will be solved parallel.    
+Constraints solve parallelly for all random variables and make sure no constraint fails.
+
+* **Example:**
+
+              //class declaration
+              class items;
+              // random variable declared by using rand keyword
+              rand bit [3:0] value1;
+              //constraint block
+              constraint addr_mode1 { value1 > 5;
+                         value1 <12;}
+              constraint addr_mode2 {value1>6;}
+              endclass
+              // module name is constraint_top
+              module constraint_top;
+               initial begin
+              int i;
+             //Here, we need to create a handle
+             //handle name is an item
+             items  item;
+             //memory allocation to the handle
+             item = new();
+             $display(" -----Output for bidirectional constraint-----");
+             $display(" -----constraint 1 & 2 limits the value to 7,8,9,10 and 11-----");
+             $display("----------------------------------------------------------------");
+             for (int i =1;i<10;i++) begin
+             void'(item.randomize());
+            $display("[%0t] @ iteration %0d -----> value1 = %0d",$time, i, item.value1);
+            end
+            $display("----------------------------------------------------------------");
+            end
+            endmodule
+       
+In the above example, we declared a class, the class name is item in which variable value1 is declared. In the constraint blocks, we are giving some conditions in both constraints. Constraints on all random variables will be solved parallel.  
+In this, constraint 1 & 2 limits the value to 7,8,9,10 and 11.
+
+
+* **Output snap:**      
+The below figure shows the output of the bidirectional constraint.
+
+![fff-Page-5 drawio](https://user-images.githubusercontent.com/110447788/191233065-f717f5f6-9208-4c68-9008-f5f3c9062d3e.png)
+
+**GitHub Lab File link:**
+
+**GitHub Lab Output link:**
+
+# Implication Constraint
+
+The implication operator is used to declare the conditional relations between two variables. The implication operator is placed between the expression and constraint
+
+implication operator is denoted by the symbol **->**   
+
+## Implication operator 
+
+The implication operator **->** is used in a constraint expression to show the conditional relationship between two variables. The implication operator is placed between the expression and constraint.
+
+If the expression on the LHS of implication operator **->** is true, then the constraint expression on the RHS will be satisfied. If the LHS is not true, then the RHS expression is not considered.
+
+**Syntax:**        
+`constraint const_name { (variable1) -> (variable2) }`
+
+ * **Example:**
+               
+             //class declaration
+            class ABC;
+            // random variable declared using rand keyword
+            rand bit [2:0] value1;
+            rand bit [3:0] value2;
+            //constraint block
+            //implication operator is used to mention conditions between
+            //two variables value1 and value2
+            constraint c_mode { (value1 inside {[1:5]}) -> (value2 <8);}
+            endclass
+            // module name is top
+            module top;
+            initial begin
+            int i;
+            //Here, we need to declare a handle
+            //handle name is abc
+            ABC abc;
+            // memory allocation to the handle
+            abc = new();
+            $display("-----Output for implication constraint-----");
+            $display("-------------------------------------------");
+            for(int i = 0; i< 10 ; i++) begin
+            void'(abc.randomize());
+            $display("[%0t] @ iteration %0d -----> value1=%0d , value2=%0d" ,$time,i, abc.value1, abc.value2);
+            end
+            $display("--------------------------------------------");
+            end
+            endmodule
+
+In the above example, we declared a class, class name is ABC in which two variables value1 and value2 are declared. In the constraint block, value1 has declared the range by using the inside keyword.        
+In this, if the value1 lies between the range of 1 and 5 then the value2 is always less than 8.    
+If the value1 does not lie between the range of 1 and 5 then the value2 is always greater than 8.     
+
+ * **Output snap:**    
+The below figure shows the output of the implication constraint.
+
+![fff-Page-7 drawio](https://user-images.githubusercontent.com/110447788/191240436-0fbc7179-7ffd-437e-8e0c-9bebfd59475e.png)
+
+                            Fig-:
+
+**GitHub Lab file link:**
+
+**GitHub Lab Output link:**
+
+
+## if-else Constraint
+ The **if-else**  block allows conditional execution of constraint. If the expression is true, all the constraints in the first constraint-block must be satisfied, otherwise, all the constraints in the optional else constraint must be satisfied.  
+
+
+ * **Example:**
+     
+             // class declaration
+             class basic;
+             //value1 & value2 are the variables
+             //random variables are created by rand keyword
+             rand bit [3:0] value1;
+             rand bit [2:0] value2;
+             constraint c_var {
+                              if(value1 inside {[4'h3:4'h9]})
+                               value2 == 1;
+                             else {
+                                   value2 == 0;}
+                            }
+             endclass
+             //module name is top
+             module top;
+             int i=1;
+             initial begin
+             //here, we need to create a handle
+             //handle name is pkt
+             basic pkt;
+            // memory allocation to the handle
+            pkt = new();
+            $display("-----Output for if else constraint-----");
+            $display("If the value1 lies between the 3 to 9, ");
+            $display(" then value2 will be 1 otherwise 0 ");
+            $display("-----------------------------------------------");
+            for (int i=0;i<5;i++)begin
+            void'( pkt.randomize());
+            $display("[%0t] @ iteration %0d ----->  value1=%0d, value2 = %0d",$time,i,pkt.value1,pkt.value2);
+            end
+            $display("-----------------------------------------------");
+            end
+            endmodule
+
+In the above example,  we declared a class, class name is basic in which two variables value1 and value2 are declared. In the constraint block, we are using the if-else condition.   
+In the if statement, the value1 has declared a range with the use of the inside keyword, and if the range lies between 3 and 9 then the value2 will always be 1 and if the range does not lie between the range of 3 and 9 then the value2 always be 0.
+
+
+
+ * **Output snap:**   
+The below figure shows the output of the if-else constraint.
+
+![fff-Page-6 drawio (2)](https://user-images.githubusercontent.com/110447788/191235603-76cca8e3-926f-49da-ac08-9a18677a563a.png)
+
+                                 Fig-:
+
+**GitHub Lab File link**
+
+**GitHub Lab Output link**
+
+
+### foreach constraint    
+ 
+The foreach constructs iterate over the elements of an array and assign all the values of each element to that of its index.      
+The foreach loop iterates over the elements of an array, so constraints with the foreach loop are called Iterative constraints
+
+**Syntax:**      
+`constraint constraint_name { foreach ( variable[iterator] )  variable[iterator] <..conditions..>  }`
+
+* **Example:**
+
+               //class declaration
+               class value;
+               //random variable declared using rand keyword 
+               rand bit [3:0] s_array1[4];
+               rand bit [3:0] s_array2[5];
+               //constraint block
+               //standard way to represent fixed array using  
+               //foreach conditional statement  
+               constraint cons {foreach(s_array1[i])
+                                 s_array1[i]==i;
+                                foreach (s_array2[i])
+                                  s_array2[i] == i;}
+               endclass
+               // module name is top
+               module top;
+               initial begin
+               //here,we need to declare handle
+               //handle name is val
+               value val;
+              //memory allocation to the handle
+              val = new();
+              $display("-------------------------------");
+              void'(val.randomize());
+              $display("\t s_array1=%0p" , val.s_array1);
+              $display("\t s_array2=%0p" , val.s_array2);
+              $display("-------------------------------");
+              end
+              endmdule
+
+In the above example, we declared a class and the class name is value in which two fixed arrays are defined.    
+two arrays s_array1 and s_array2 are declared inside the class.  This constraint will iterate through each of the elements in an array,
+and set each element to the value of its particular index
+
+
+ * **Output snap:**     
+
+The below figure shows the output of the foreach constraint. 
+    
+![fff-Page-8 drawio](https://user-images.githubusercontent.com/110447788/191323141-af0fbc8d-4923-4a90-aaf4-8e022372ec31.png)
+
+                                         Fig-:
+
+**GitHub Lab File link:**
+
+**GitHub Lab Output link:**
 
    
 
