Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -394,11 +394,12 @@ The inside keyword is used to check if a given value lies within the range.
 The values contained by the inside block can be variable, constant, or range. **inside** construct includes both upper and lower limits and it gathers all values and chooses between the values with equal probability.    
 In the inside block, we write inside keyword followed by curly braces{}
 
-**Syntax**
+* **Syntax**
  
  `constraint const_name { variable inside { values or range };}`
 
- * **Example:**
+ * **Example:**     
+Let's take an example of inside constraint for better understanding.
 
               // class declaration
               class PQR;
@@ -443,15 +444,16 @@ The below figure shows the output of the inside constraint.
 **GitHub Lab Output link**
 
 
-# Inverted inside
+# Inverted inside constraint
 
 The inverted inside is the opposite of the inside operator. It can be achieved by just placing a not symbol **!** before it.    
 If we want to generate a value that should not be inside a range of values (range_of_values), here we can use the inside operator with negation
 
-**Syntax**    
+* **Syntax**    
 ` constraint const_name { !(variable inside { values or range });}`
 
-* **Example:**
+* **Example:**      
+Let's take an example of  invert inside constraint for better understanding.
 
               // class declaration
               class PQR;
@@ -506,12 +508,13 @@ There are two types of distribution operators
 ## 1.  := operator
 The := operator assigns the specified weight to the item or, if the item is a range, specified value to every value in the range. 
 
-**Syntax**
+* **Syntax**
 
 `value := weightage`
 
- * **Example:**  
-      
+ * **Example:**      
+              Let's take an example := operator for better understanding.
+
             class myWorld;
             // random variable declared using the rand keyword
             rand bit [3:0] value1;
@@ -559,11 +562,12 @@ The below figure shows the output of the weighted distribution with := operator.
 
 The :/ operator assigns the specified weight to the item or,  if the item is a range,  to the range as a whole. If there are n values in the range, the weight of each value is range_weight / n
 
-**Syntax**
+* **Syntax**
 
 ` value :/ weightage`
 
- * **Example**
+ * **Example**      
+Let's take an example of :/ operator for better understanding.
 
              //class declaration
              class myWorld;
@@ -614,7 +618,8 @@ The below figure shows the output of the weighted distribution with :/ operator.
 Constraints are solved bidirectionally, which means constraints on all random variables will be solved parallel.    
 Constraints solve parallelly for all random variables and make sure no constraint fails.
 
-* **Example:**
+* **Example:**      
+Let's take an example of bidirectional constraint for better understanding.
 
               //class declaration
               class items;
@@ -670,11 +675,12 @@ The implication operator **->** is used in a constraint expression to show the c
 
 If the expression on the LHS of implication operator **->** is true, then the constraint expression on the RHS will be satisfied. If the LHS is not true, then the RHS expression is not considered.
 
-**Syntax:**        
+* **Syntax:**        
 `constraint const_name { (variable1) -> (variable2) }`
 
- * **Example:**
-               
+ * **Example:**       
+           Let's take an example of an implication operator for better understanding.  
+  
              //class declaration
             class ABC;
             // random variable declared using rand keyword
@@ -724,8 +730,9 @@ The below figure shows the output of the implication constraint.
  The **if-else**  block allows conditional execution of constraint. If the expression is true, all the constraints in the first constraint-block must be satisfied, otherwise, all the constraints in the optional else constraint must be satisfied.  
 
 
- * **Example:**
-     
+ * **Example:**      
+Let's take an example of the if-else constraint for better understanding.
+
              // class declaration
              class basic;
              //value1 & value2 are the variables
@@ -782,10 +789,11 @@ The below figure shows the output of the if-else constraint.
 The foreach constructs iterate over the elements of an array and assign all the values of each element to that of its index.      
 The foreach loop iterates over the elements of an array, so constraints with the foreach loop are called Iterative constraints
 
-**Syntax:**      
+ * **Syntax:**      
 `constraint constraint_name { foreach ( variable[iterator] )  variable[iterator] <..conditions..>  }`
 
-* **Example:**
+* **Example:**      
+Let's take an example of foreach constraint for better understanding.
 
                //class declaration
                class value;
