Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -28,8 +28,6 @@ This system function is used to give the pseudorandom numbers.  These functions 
 * **Example -**  
  The below example shows the random function code.   
 
-* **Code Snippet**  
-
       a = $random();  
       b = $urandom();  
       c= $urandom_range(4,2); //GIVING RANGE (MAX,MIN)  
@@ -85,10 +83,8 @@ rand is non-cyclic in nature. It will randomly give any value and can repeat the
 
 The below example is of rand variable.  
 
-* **Code Snippet**  
-
       class rand_function;  
-         rand logic [2:0] a ; // byte is 2 state signed data type  
+         rand logic [2:0] a ; 
       endclass  
       rand_function raf;  
         module rand_var;  
@@ -126,8 +122,6 @@ randc is cyclic in nature. It will give a random value and repeat it after compl
 
 The below example is for randc variable.  
   
-* **Code Snippet**  
-
       class pack;  
         randc bit [2:0]a;  
       endclass  
@@ -189,8 +183,6 @@ If we declare constraint without using the extern keyword, then it will display 
 
 The below example will show the constraint declaration with the use of the extern keyword. Here, there are two constraints declared that is b and y. b is declared inside the class and y is declared outside the class using the extern keyword.
 
-* **Code Snippet**  
-
       class class_a;  
       rand byte a;  
       rand byte x;  
@@ -205,14 +197,14 @@ The below example will show the constraint declaration with the use of the exter
       pack = new;  
       for (int i =0;i<=5;i++)begin  
       void'(pack.randomize());  
-      $display ( "Iteration = %0d  Value of a = %0d Value of b = %0d  " , i,pack.a,pack.x);  
+      $display ( "Iteration = %0d  Value of a = %0d Value of x = %0d  " , i,pack.a,pack.x);  
       end  
       end  
 
 * **Output Snap**  
 Here, the output shows the randomization of a variable using an extern constraint.
-<img width="554" alt="cons_4" src="https://user-images.githubusercontent.com/110443268/190843316-09b3ad9c-88fd-445c-916a-5b7c74d4e074.png">
 
+<img width="563" alt="cons_10" src="https://user-images.githubusercontent.com/110443268/191426898-5c66163a-fe09-4466-8b9f-7188b90d012c.png">
 
 
 **GitHub Lab file link**  
@@ -232,9 +224,6 @@ Declare the array as the keyword rand or randc; on randomization, the elements o
 
 * **Example -1**  
 The below example show the randomization of the one-dimensional static array.  
-
-* **Code Snippet**      
-
 
        class static_array;  
        randc byte  a[5];  
@@ -271,8 +260,6 @@ Here, the output will show two outputs one is before randomization and the other
 * **Example -2**-  
 The below example shows the randomization of a two-dimensional static array without using constraint. 
 
-* **Code Snippet**  
-
       class class_1;  
       rand bit [3:0]a[2][4];  
       endclass  
@@ -301,8 +288,6 @@ Here, the output, shows the randomization of a two-dimensional array using rand 
 * **Example -3**  
 The below example show the randomization of the multidimensional static array using the constraint. Inside the constraint, foreach loop is used to give the condition to the variable. 
 
-* **Code Snippet**-  
-
       class class_1;  
       rand bit [4:0]a[2:0][3:0];  
       constraint b{foreach (a[i,j])    // standard way to represent multidimensional array using  
@@ -328,7 +313,7 @@ The below example show the randomization of the multidimensional static array us
   
 Here, the array randomization is done 6 times. As we can see, all the element's value is less than 12.  
 
-<img width="677" alt="cons_9" src="https://user-images.githubusercontent.com/110443268/191228931-aaff4b65-c227-461e-867e-1aedee1470c1.png">
+<img width="663" alt="cons_11" src="https://user-images.githubusercontent.com/110443268/191428807-082a63a5-0997-4b64-bdf3-2b88ee2bbfab.png">
 
 
 **GitHub Lab File Link**   
@@ -349,9 +334,6 @@ The output after randomization is an empty array if the size is not constrained.
 
 * **Example**    
   
-
-* **Code Snippet**  
-
       class class_1;  
        randc bit [7:0] dyn_arr[];  
        // declaring a dynamic array, each element is of 8 bits.  
