wiki about constant variables

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -365,4 +365,112 @@ Here class method is define the outside the class but after access it by using c
 -------------------------------------------------------------------------------------
 
 **Github lab link**:  
-**Github logfile link**:  
+**Github logfile link**: 
+
+
+# Constant-class-properties  
+To make class properties read-only, a const specifier is used. Since class objects are dynamic in nature, SystemVerilog provides two types of constants
+
+1.Global constants  
+2.Instance constants  
+
+In both we use the 'const' keyword to declare the constant values.
+
+![constant-class-image](https://user-images.githubusercontent.com/110509375/191166968-1969000f-16c2-43e7-9c19-73d801dc0de2.png)
+
+
+## 1.Global Constants
+During variable declaration, an initial value is assigned, such class properties known as global constants. The value of a variable can not be changed after the declaration of the variable
+
+**syntax**:  
+class example;  
+int a;  
+**const** int b=2;  
+endclass  
+
+**Code Snippet**
+
+    class data;
+    string a;
+    const int b=1;//global constant
+     function new();
+      a="team";
+      endfunction
+     function void display();
+     $display("a=%0d,b=%0d",a,b);
+     endfunction
+    endclass
+     initial begin
+     p1=new();
+     p1.display();
+     // p1.b=2;// invalid usage of b
+     //-------------------------------------------------------
+    //Here we assigned the b value in class properties using 'const' again we
+    //should not assign the value for 'b' even though we declared the values it throws the 
+    //errors.
+    //-------------------------------------------------------
+    p2= new p1;//shallow copy
+    p2.display();
+    p2.ar.a="BJT";
+    //p2.ar.b=8;
+    p2.d=5;
+    p2.c="TEAM";
+    p1.display();
+    p2.display();
+    end
+
+**Output**  
+In the below figure you can see that value of b is '1' only because we declared it as a constant value.Even if we wan't to change the value of 'b' it throws errors.It won't take the values after it declares as constant.
+  
+![Untitled Diagram drawio (9)](https://user-images.githubusercontent.com/110509375/190967777-8d7c5fb7-4aa2-4b3e-96cd-cc7f24957c22.png)
+
+
+## 2.Instance Constants
+During variable declaration, an initial value is not assigned, such class properties are known as instance constants. An instance constant allows a user to assign value in run time only once in the class constructor.
+
+**syntax**:  
+class example;  
+int a;  
+**const** int b;  
+function new();  
+b=9;  
+endfunction  
+endclass
+
+**Code Snippet**
+
+    class data;
+    const int a;
+    string b;
+    function new();
+    a=5;
+    b="bhavana";
+    endfunction
+    function void display();
+     $display("a=%0d,b=%0d",a,b);
+    endfunction
+    endclass  
+    initial begin  
+    t1=new();  
+    //t1.a=2;  
+    //--------------------------------------------------------------------------------------------  
+    //Here we should not assign value for the 'a' because we declared the 'a' as constant variable.   
+    //so if we assign any value to the 'a' it throws errors it won't take any value eventhough we   
+    //declared.  
+    //--------------------------------------------------------------------------------------------  
+    t1.dt.b="team";  
+    t1.display();  
+    t2= t1;//class_assignment  
+    t2.d=7;  
+    t2.display();  
+    t2.c=8;  
+    t2.d=0;  
+    t2.dt.b="BJT";  
+    t1.display();  
+    t2.display();  
+    end   
+
+**Output**
+
+![Untitled Diagram drawio (11)](https://user-images.githubusercontent.com/110509375/190968789-2041ae50-f873-4e87-9f20-72f9d352f235.png)
+
