Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -797,7 +797,8 @@ wave form @negedge clock
    `synatax: virtual interface_name instance_name;`
 
 interface_name: name of the interface  
-instance_name: name of the interface instance can be called in the class with variables Ex: vif.variable;  
+instance_name: name of the virtual interface instance can be used in the class with variables Ex: vif.variable;  
+
 * The virtual interface must be initialized in the class pointing to actual interface.
     Declaration of virtual interface in the class
     `Example: Virtual intf vif;  
